--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "electron": "^4.1.4",
+    "lookpath": "0.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
