--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "electron": "^9.4.0",
-    "lookpath": "^1.0.2",
+    "lookpath": "^1.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular/cli": "^11.2.4",
+    "@angular/compiler-cli": "^11.2.5",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -38,13 +38,13 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "^6.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "too": "^2.0.2",
+    "protractor": "^7.0.0",
+    "too": "^2.1.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
